--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ p {
   text-align: center;
   background: #f9f7fe;
 }
-.hero.p {
+.hero p {
   font-size: 36px;
   font-weight: bold;
 }
-.hero.h2 {
+.hero h2 {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
 }
