--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ p {
 .hero p {
   font-size: 36px;
   font-weight: bold;
+  margin: 0;
+  line-height: 2;
+  color: #272142;
 }
 .hero h2 {
   font-family: "Poppins", sans-serif;
