--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+  --branding-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+
 h1,
 h2,
 h3,
@@ -5,19 +11,20 @@ h4,
 h5,
 h6 {
   color: black;
-  font-family: "Playfair Display", serif;
+  font-family: var (--heading-font-family);
   font-weight: bold;
 }
 h1 {
   font-size: 96px;
 }
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: var (--default-font-family);
   font-weight: normal;
 }
 .hero {
   text-align: center;
   background: #f9f7fe;
+  padding: 160px 20;
 }
 .hero p {
   font-size: 36px;
@@ -27,7 +34,15 @@ p {
   color: #272142;
 }
 .hero h2 {
-  font-family: "Poppins", sans-serif;
+  font-family: var (--default-font-family);
   font-size: 24px;
   font-weight: normal;
+}
+.btn-branding {
+  background: var (--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
