--- a/style.css
+++ b/style.css
@@ -17,9 +17,13 @@ h6 {
 h1 {
   font-size: 96px;
 }
+h2 {
+  font-size: 64px;
+}
 p {
-  font-family: var (--default-font-family);
   font-weight: normal;
+  font-size: 16px;
+  line-height: 1.5;
 }
 .hero {
   text-align: center;
@@ -42,6 +46,14 @@ p {
   background: var (--branding-color);
   border-radius: 4px;
   color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.btn-branding-outline {
+  border-radius: 4px;
+  color: var (--branding-color);
+  border: 1px solid var (--branding-color);
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
