--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h4,
 h5,
 h6 {
   color: black;
-  font-family: var (--heading-font-family);
+  font-family: var(--heading-font-family);
   font-weight: bold;
 }
 h1 {
@@ -23,7 +23,7 @@ h2 {
 p {
   font-weight: normal;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 30px;
 }
 .hero {
   text-align: center;
@@ -38,12 +38,12 @@ p {
   color: #272142;
 }
 .hero h2 {
-  font-family: var (--default-font-family);
+  font-family: var(--default-font-family);
   font-size: 24px;
   font-weight: normal;
 }
 .btn-branding {
-  background: var (--branding-color);
+  background: var(--branding-color);
   border-radius: 4px;
   color: white;
   font-size: 18px;
@@ -52,8 +52,8 @@ p {
 }
 .btn-branding-outline {
   border-radius: 4px;
-  color: var (--branding-color);
-  border: 1px solid var (--branding-color);
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
