--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@ h6 {
   font-family: var(--heading-font-family);
   font-weight: bold;
 }
+
 h1 {
   font-size: 96px;
 }
+
 h2 {
   font-size: 64px;
 }
@@ -45,7 +47,7 @@ p {
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
-  color: white;
+  color: var(--branding-color);
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
@@ -53,8 +55,17 @@ p {
 .btn-branding-outline {
   border-radius: 4px;
   color: var(--branding-color);
-  border: 1px solid var(--branding-color);
+  border: 3px solid var(--branding-color);
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+.projection-description {
+  padding: 120px 60px;
+}
+@media (max-width: 960px) {
+  .projection-description {
+    padding: 0;
+    text-align: center;
+  }
 }
