--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ p {
   font-size: 24px;
   font-weight: normal;
 }
-.btn-branding {
+.btn-btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
   color: var(--branding-color);
