--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p {
 .btn-branding {
   background: #6c63ff;
   border-radius: 4px;
-  color: var(--branding-color);
+  color: #6c63ff;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
