--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ p {
   font-weight: normal;
 }
 .btn-branding {
-  background: #6c63ff;
+  background: var(--branding-color);
   border-radius: 4px;
-  color: #6c63ff;
+  color: var(--branding-color);
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
