--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h6 {
 
 h1 {
   font-size: 96px;
+  line-height: 1.5;
 }
 
 h2 {
@@ -43,6 +44,7 @@ p {
   font-family: var(--default-font-family);
   font-size: 24px;
   font-weight: normal;
+  line-height: 1.5;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -63,9 +65,30 @@ p {
 .projection-description {
   padding: 120px 60px;
 }
-@media (max-width: 960px) {
+@media (max-width: 900px) {
+  h1 {
+    font-size: 60px;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
   .projection-description {
     padding: 0;
     text-align: center;
   }
+}
+footer .social-icons {
+  margin: 0;
+  padding: 0 20px;
+  min-width: 163px;
+}
+footer {
+  color: var(--branding-color);
+  background-color: var(--branding-color);
+  padding: 20px 60px;
+  align-items: center;
+  margin-top: auto;
 }
